{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 25,
  "lineage": "16016f61-d087-c323-cdd1-1998462d9e86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0317b0f0a0144b137",
            "arn": "arn:aws:ec2:ap-south-1:531752696321:instance/i-0506a9e6d59d38c8a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0506a9e6d59d38c8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05539b130f60ced14"
              }
            ],
            "primary_network_interface_id": "eni-05539b130f60ced14",
            "private_dns": "ip-10-0-1-194.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_ip": "65.2.35.241",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b7eff176e8d2d375",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcd50939c572c82e",
            "tags": {
              "Name": "my-server"
            },
            "tags_all": {
              "Name": "my-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0463c400a5c01cb45"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "i-0506a9e6d59d38c8a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:internet-gateway/igw-003f31739b4457364",
            "id": "igw-003f31739b4457364",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-06374f1b7e3d790bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:route-table/rtb-0db0759d93f04125d",
            "id": "rtb-0db0759d93f04125d",
            "owner_id": "531752696321",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003f31739b4457364",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-rt"
            },
            "tags_all": {
              "Name": "my-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06374f1b7e3d790bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "rtb-0db0759d93f04125d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb9ee7695e51a143",
            "region": "ap-south-1",
            "route_table_id": "rtb-0db0759d93f04125d",
            "subnet_id": "subnet-0dcd50939c572c82e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:security-group/sg-0463c400a5c01cb45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0463c400a5c01cb45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260210094851471400000001",
            "name_prefix": "terraform-",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-security"
            },
            "tags_all": {
              "Name": "my-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-06374f1b7e3d790bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "sg-0463c400a5c01cb45",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:subnet/subnet-0b0defb444e78d0fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0defb444e78d0fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531752696321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-private"
            },
            "tags_all": {
              "Name": "my-private"
            },
            "vpc_id": "vpc-06374f1b7e3d790bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "subnet-0b0defb444e78d0fe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:subnet/subnet-0dcd50939c572c82e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcd50939c572c82e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531752696321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-public"
            },
            "tags_all": {
              "Name": "my-public"
            },
            "vpc_id": "vpc-06374f1b7e3d790bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "subnet-0dcd50939c572c82e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:vpc/vpc-06374f1b7e3d790bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7372836e99c4a06",
            "default_route_table_id": "rtb-03efe1b4398c47d3c",
            "default_security_group_id": "sg-0624359f4dd1c7bfd",
            "dhcp_options_id": "dopt-03f29eba5a3bdcc72",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06374f1b7e3d790bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03efe1b4398c47d3c",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "vpc-06374f1b7e3d790bc",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}